# gappa-coq

./: .cvsignore  .gitignore  .gitlab-ci.yml  AUTHORS  COPYING  F_rnd.v  Gappa_common.v  Gappa_decimal.v  Gappa_definitions.v  Gappa_dyadic.v  Gappa_fixed.v  Gappa_float.v  Gappa_library.v  Gappa_obfuscate.v  Gappa_pred_abs.v  Gappa_pred_bnd.v  Gappa_pred_fixflt.v  Gappa_pred_nzr.v  Gappa_pred_rel.v  Gappa_proxy.v  Gappa_real.v  Gappa_rewriting.v  Gappa_round.v  Gappa_round_aux.v  Gappa_round_def.v  Gappa_tactic.v  Gappa_tactic_legacy.v  Gappa_tactic_plugin.v  Gappa_user.v  IA_754s.v  IA_comput.v  IA_error.v  IA_float.v  IA_manip.v  IA_real.v  INSTALL  INSTALL.md  Makefile  Makefile.am  NEWS  (+9 more)
misc/: Dockerfile  ci.md
src/: Gappa_common.v  Gappa_decimal.v  Gappa_definitions.v  Gappa_dyadic.v  Gappa_fixed.v  Gappa_float.v  Gappa_integer.v  Gappa_library.v  Gappa_pred_abs.v  Gappa_pred_bnd.v  Gappa_pred_fixflt.v  Gappa_pred_nzr.v  Gappa_pred_rel.v  Gappa_proxy.v  Gappa_real.v  Gappa_rewriting.v  Gappa_round.v  Gappa_round_aux.v  Gappa_round_def.v  Gappa_tactic.v  Gappa_tactic_legacy.v  Gappa_tactic_plugin.v  Gappa_tree.v  Gappa_user.v  Makefile.am  gappatac.c  gappatac.ml
testsuite/: Makefile.am  bug-20091016.v  bug-20091019.v  bug-20121219.v  bug-20130220.v  bug-20130708.v  bug-20130713.v  bug-20130716.v  bug-20180309.v  bug-20200404.v  dichotomy-20130707.v  dichotomy-20160718.v  example-20080417.v  example-20090706.v  example-20101018.v
